added photos to all services sub pages

--- a/service-areas/darian-ct.html
+++ b/service-areas/darian-ct.html
@@ -155,12 +155,12 @@
                                         </li>
                                         <li>
                                             <a href="../services/water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="../services/site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
