--- a/services/drainage-systems.html
+++ b/services/drainage-systems.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -303,9 +303,7 @@
                                         <div class="services-post">
                                             <center>
                                                 <img
-                                                style="width:500px; height:auto"
-                                                    
-                                                    src="../upload/others/repair.jpg"
+                                                    src="../upload/others/drainage-services-stamford-ct.jpg"
                                                     alt=""
                                                 />
                                             </center>
@@ -404,7 +402,7 @@
                                         </li>
                                         <li >
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li >
