--- a/services/excavation.html
+++ b/services/excavation.html
@@ -186,7 +186,7 @@
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                            >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -302,11 +302,9 @@
                                     <div class="col-md-12">
                                         <div class="services-post">
                                             <center>
-                                                <img
-                                                style="width:500px; height:auto"
-                                                    
-                                                    src="../upload/others/repair.jpg"
-                                                    alt=""
+                                                <img    
+                                                    src="../upload/others/excavation-services-stamford-ct.jpg"
+                                                    alt="excavation services stamford ct"
                                                 />
                                             </center>
                                             <div class="services-content">
@@ -318,7 +316,7 @@
                                                     With a keen understanding of the local terrain, we provide tailor-made solutions that restore stability and functionality. Whether it's residential or commercial, our adept technicians promptly diagnose issues and execute precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Rely on us to fortify your property's foundation and ensure the integrity of your underground systems. Contact us today for excavation repair services optimized for Stamford's unique landscape.
+                                                    Rely on us to fortify your property's water, drainage, and sanitary sewer needs - and ensure the integrity of your underground systems. Contact us today for excavation repair services optimized for Stamford's unique landscape.
                                                 </p>
                                             </div>
                                         </div>
@@ -363,7 +361,7 @@
                                         </li>
                                         <li >
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li >
