--- a/services/index.html
+++ b/services/index.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                            >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -302,7 +302,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="../upload/others/repair.jpg"
+                                                src="../upload/others/water-services-stamford-ct.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
@@ -323,7 +323,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="../upload/others/new_install.jpg"
+                                                src="../upload/others/water-drainage-new-installation-stamford-ct.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
