--- a/services/sanitary-sewers.html
+++ b/services/sanitary-sewers.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -301,7 +301,12 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="services-post">
-                                            
+                                            <center>
+                                                <img    
+                                                    src="../upload/others/sanitary-sewer-services-stamford-ct.jpg"
+                                                    alt="sanitary sewer services stamford ct"
+                                                />
+                                            </center>
                                             <div class="services-content">
                                                 <h2>Sanitary Sewer Services in Stamford, CT</h2>
                                                 <p>
@@ -356,7 +361,7 @@
                                         </li>
                                         <li >
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li >
