--- a/services/water-services.html
+++ b/services/water-services.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -299,87 +299,31 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            <center>
+                                                <img    
+                                                    src="../upload/others/water-services-stamford-ct.jpg"
+                                                    alt=""
+                                                />
+                                            </center>
+                                            
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Water Services Repair in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    Searching for efficient and reliable water service repair in Stamford, CT, and nearby areas? Your search ends here. Our specialized team excels in expert water service repairs, addressing concerns within vital underground plumbing infrastructure. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    From fixing water line leaks and addressing corroded pipes to restoring water pressure and ensuring proper water flow, we provide tailored solutions to reinstate functionality. With a profound understanding of the local terrain, we promptly diagnose issues and execute precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Whether it's residential or commercial, our adept technicians handle a variety of problems, ensuring your water supply remains uninterrupted. Count on us to fortify your property's water services and ensure reliable access to clean water. Reach out today for water service repair optimized for Stamford's unique landscape, ensuring lasting and unwavering outcomes.
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <div class="services-post">
-                                            <img
-                                                src="../upload/others/maintanance.jpg"
-                                                alt=""
-                                            />
-                                            <div class="services-content">
-                                                <h2>New Installation</h2>
-                                                <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
-                                                </p>
-                                                <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
-                                                </p>
-                                                <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
 
@@ -418,7 +362,7 @@
                                         </li>
                                         <li >
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li class="active">
