--- a/services/trenching.html
+++ b/services/trenching.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -299,87 +299,30 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            <center>
+                                                <img    
+                                                    src="../upload/others/trenching-services-stamford-ct.jpg"
+                                                    alt="trenching services stamford ct"
+                                                />
+                                            </center>
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Trenching Services in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    In need of swift and reliable trenching repair services in Stamford, CT, and neighboring areas? Look no further. Our specialized team excels in expert trenching repairs, addressing concerns within excavation and underground plumbing infrastructure. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    Whether it's water services repair, sanitary sewer servicing, utility line disruptions, or landscaping complications, we provide tailored solutions to reinstate precision and functionality. With a deep understanding of the local terrain, we promptly diagnose issues and execute precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    From stopped sewer lines to utility line adjustments, we handle a variety of trenching problems, ensuring your property's integrity. Rely on us to fortify your property's groundwork and ensure the steadfastness of your underground systems. Contact us today for trenching repair services optimized for Stamford's unique landscape, ensuring lasting and dependable outcomes.
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <div class="services-post">
-                                            <img
-                                                src="../upload/others/maintanance.jpg"
-                                                alt=""
-                                            />
-                                            <div class="services-content">
-                                                <h2>New Installation</h2>
-                                                <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
-                                                </p>
-                                                <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
-                                                </p>
-                                                <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
 
@@ -418,7 +361,7 @@
                                         </li>
                                         <li >
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li >
