--- a/services/water-mains.html
+++ b/services/water-mains.html
@@ -181,12 +181,12 @@
                                         </li>
                                         <li>
                                             <a href="./water-mains.html"
-                                                >Water Mains</a
+                                                >Water Main</a
                                             >
                                         </li>
                                         <li>
                                             <a href="./site-work.html"
-                                                >Water Mains</a
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li>
@@ -281,11 +281,11 @@
 			================================================== -->
             <section class="page-banner-section">
                 <div class="container">
-                    <h1>Water Mains System Service</h1>
+                    <h1>Water Main System Service</h1>
                     <ul class="page-depth">
                         <li><a href="../">Home</a></li>
                         <li><a href="../services">Services</a></li>
-                        <li><a href="#">Water Mains System</a></li>
+                        <li><a href="#">Water Main System</a></li>
                     </ul>
                 </div>
             </section>
@@ -299,87 +299,30 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="services-post">
-                                            <img
-                                                src="../upload/others/7.jpg"
-                                                alt=""
-                                            />
+                                            <center>
+                                                <img    
+                                                    src="../upload/others/water-main-services-stamford-ct.jpg"
+                                                    alt=""
+                                                />
+                                            </center>
                                             <div class="services-content">
-                                                <h2>Repair</h2>
+                                                <h2>Water Main Systems Service in Stamford, CT</h2>
                                                 <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
+                                                    In search of swift and reliable water main repair services in Stamford, CT, and nearby areas? Your search ends here. Our dedicated team specializes in expert water main repairs, addressing concerns within essential underground plumbing infrastructure. 
                                                 </p>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
+                                                    From addressing leaks and bursts to tackling low water pressure, we provide tailored solutions to restore water flow and functionality. With a profound understanding of the local terrain, we promptly diagnose issues and execute precise repairs. 
                                                 </p>
                                                 <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
+                                                    Whether it's residential or commercial, our adept technicians handle a variety of problems, ensuring your water supply's reliability. Count on us to fortify your property's water infrastructure and ensure consistent water access. Reach out today for water main repair services optimized for Stamford's unique landscape.
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <div class="services-post">
-                                            <img
-                                                src="../upload/others/maintanance.jpg"
-                                                alt=""
-                                            />
-                                            <div class="services-content">
-                                                <h2>New Installation</h2>
-                                                <p>
-                                                    Aenean sed justo tincidunt,
-                                                    vulputate nisi sit amet,
-                                                    rutrum ligula. Pellentesque
-                                                    dictum aliquam ornare. Sed
-                                                    elit lectus.
-                                                </p>
-                                                <p>
-                                                    Lorem ipsum dolor sit amet,
-                                                    consectetur adipisicing
-                                                    elit, sed do eiusmod tempor
-                                                    incididunt ut labore et
-                                                    dolore magna aliqua. Ut enim
-                                                    ad minim veniam, quis
-                                                    nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex
-                                                    ea commodo consequat.
-                                                </p>
-                                                <p>
-                                                    Duis aute irure dolor in
-                                                    reprehenderit in voluptate
-                                                    velit esse cillum dolore eu
-                                                    fugiat nulla pariatur.
-                                                    Excepteur sint occaecat
-                                                    cupidatat non proident, sunt
-                                                    in culpa qui officia
-                                                    deserunt mollit anim id est
-                                                    laborum.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
 
